# thore

./: .gitignore  LICENSE  README.md  build.cmd  main.js  package-lock.json  package.json
.github/workflows/: release.yml
lib/: fdsn.js  miniseed.js
renderer/: caps.js  dsp.js  fdsn.js  index.html  map.js  miniseed.js  renderer.js  seismo.css  seismo.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
